# crypto-ml-trader

./: README.md  pyproject.toml
crypto_ml_trader/: __init__.py  __main__.py  config.py
crypto_ml_trader/dataset/: historic_dataset.py
crypto_ml_trader/historical/: bulk.py  downloader.py
crypto_ml_trader/simulator/: __init__.py
crypto_ml_trader/utils/: http.py
